--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="icon" type="image/x-icon" href="https://www.mancity.com/dist/images/logos/crest.svg">
     <title>Etihad Tour</title>
   </head>
   <body>
